--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -151,13 +151,12 @@
               <h3 class="mb-0">과목, 강좌 가능일</h3>
               <div class="mb-1 text-muted">-----------------------------</div>
               <p class="card-text mb-auto text-muted">
-                개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해
-                주세요.
-              </p>
-              <a href="/myinfo/instructor/update">인증</a>
+               과목, 강좌 가능일을 수정하고 싶다면 오른쪽 변경 버튼을 눌러주세요.
+	      </p>
               <a href="/myinfo/instructor/lecture/history">강의 기록</a>
             </div>
             <div class="col-auto d-none d-lg-block" style="color: white">
+	     <a href="/myinfo/instructor/update">
               <svg
                 id="change_button"
                 class="bd-placeholder-img"
@@ -168,7 +167,6 @@
                 aria-label="Placeholder: Thumbnail"
                 preserveAspectRatio="xMidYMid slice"
                 focusable="false"
-                onclick="javascript:mypage_list.button_validation()"
               >
                 <rect
                   width="100%"
@@ -186,6 +184,7 @@
                   변경
                 </text>
               </svg>
+	     </a>
             </div>
           </div>
         </div>
@@ -204,7 +203,6 @@
                 주세요.
               </p>
               <a href="/myinfo/user_information_change">인증</a>
-              <a href="/myinfo/update/instructor">강사정보 추가</a>
             </div>
             <div class="col-auto d-none d-lg-block" style="color: white">
               <svg
