--- a/views/user_information_change.ejs
+++ b/views/user_information_change.ejs
@@ -169,7 +169,7 @@
                   id="sendBtn"
                   class="btn btn-primary btn-block btn-lg ml-auto custombtn"
                   value="인증번호 요청"
-                  onclick="password_emailSend('EA')"
+                  onclick="info_change_emailSend('EA')"
                 />
                 <input
                   type="button"
