--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -83,10 +83,13 @@
     margin-top: 6px;
     font-weight: bold;
   }
+  .cart__list__detail{
+	  background-color:#fff;
+  }
 
   .cart__list__smartstore {
     font-size: 12px;
-    color: gray;
+    color: black;
   }
 
   .cart__list__option {
@@ -118,9 +121,6 @@
 
   .cart__list__detail :nth-child(4),
   .cart__list__detail :nth-child(5),
-  .cart__list__detail :nth-child(6) {
-    border-left: 2px solid whitesmoke;
-  }
 
   .cart__list__detail :nth-child(5),
   .cart__list__detail :nth-child(6) {
@@ -182,4 +182,24 @@
 
   * {
     box-sizing: border-box;
+  }
+   .abutton{
+    margin-left: 10px;
+  }
+  .cart_delete{
+    display: inline-flex;
+    flex-direction: column;
+    padding-right: 250px;
+
+  }
+
+  .result_price{
+    color:#333333;
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 20px;
+  }
+  .point_info{
+    color:#333333;
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 20px;
   }
