--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -150,41 +150,41 @@
               <h3 class="mb-0">과목, 강좌 가능일</h3>
               <div class="mb-1 text-muted">-----------------------------</div>
               <p class="card-text mb-auto text-muted">
-                개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해
-                주세요.
+                과목, 강좌 가능일을 수정하고 싶다면 오른쪽 변경 버튼을
+                눌러주세요.
               </p>
-              <a href="/myinfo/instructor/update">인증</a>
               <a href="/myinfo/instructor/lecture/history">강의 기록</a>
             </div>
             <div class="col-auto d-none d-lg-block" style="color: white">
-              <svg
-                id="change_button"
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-                onclick="javascript:mypage_list.button_validation()"
-              >
-                <rect
-                  width="100%"
-                  height="100%"
-                  fill="#55595c"
-                  style="color: white"
-                />
-                <text
-                  x="50%"
-                  y="50%"
-                  fill="#eceeef"
-                  dy=".5em"
-                  style="font-size: 35px"
+              <a href="/myinfo/instructor/update">
+                <svg
+                  id="change_button"
+                  class="bd-placeholder-img"
+                  width="200"
+                  height="250"
+                  xmlns="http://www.w3.org/2000/svg"
+                  role="img"
+                  aria-label="Placeholder: Thumbnail"
+                  preserveAspectRatio="xMidYMid slice"
+                  focusable="false"
                 >
-                  변경
-                </text>
-              </svg>
+                  <rect
+                    width="100%"
+                    height="100%"
+                    fill="#55595c"
+                    style="color: white"
+                  />
+                  <text
+                    x="50%"
+                    y="50%"
+                    fill="#eceeef"
+                    dy=".5em"
+                    style="font-size: 35px"
+                  >
+                    변경
+                  </text>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
@@ -203,7 +203,6 @@
                 주세요.
               </p>
               <a href="/myinfo/user_information_change">인증</a>
-              <a href="/myinfo/update/instructor">강사정보 추가</a>
             </div>
             <div class="col-auto d-none d-lg-block" style="color: white">
               <svg
