수강 후기 조정

--- a/views/ask_page.ejs
+++ b/views/ask_page.ejs
@@ -347,16 +347,16 @@
           aria-labelledby="headingEight"
           data-bs-parent="#accordionExample"
         >
-          <div class="accordion-body">
-            코딩나라에서
-            <span
-              >환불은
+	<div class="accordion-body">
+            <p>
+              마이페이지에서 '환불' 버튼을 클릭하여 진행 가능합니다. →
+              코딩나라는
               <a
                 href="https://easylaw.go.kr/CSP/CnpClsMain.laf?popMenu=ov&csmSeq=1140&ccfNo=4&cciNo=2&cnpClsNo=1"
                 >환불 규정</a
               >
-              내용을 따릅니다.</span
-            >
+              내용을 따릅니다.
+            </p>
           </div>
         </div>
       </div>
