푸터와 이미지 추가 및 추가 결제 기능 구현

--- a/views/my_page_root.ejs
+++ b/views/my_page_root.ejs
@@ -39,6 +39,8 @@
       type="text/javascript"
       src="../js/email_validation_and_address_script.js"
     ></script>
+    <script type="text/javascript" src="../js/scripts.js"></script>
+    <script type="text/javascript" src="../js/payment.js"></script>
     <script type="text/javascript" src="../js/mypage.js"></script>
     <script
       type="text/javascript"
@@ -263,13 +265,14 @@
           <table class="board-table">
             <thead>
               <tr>
-                <th scope="col" class="th-title">강좌명</th>
+                <th scope="col" class="th-date">강좌명</th>
                 <th scope="col" class="th-date">강의 시간</th>
                 <th scope="col" class="th-date">남은 횟수</th>
                 <th scope="col" class="th-date">선생님</th>
                 <th scope="col" class="th-date">리뷰</th>
                 <th scope="col" class="th-date">강의</th>
                 <th scope="col" class="th-date">강의 코드</th>
+                <th scope="col" class="th-date">추가 결제</th>
               </tr>
             </thead>
 
